<resources>
    <string name="app_name">PhoNote</string>
    <string name="Add">Add</string>
    <string name="view">View</string>
    <string name="date">Date</string>
    <string name="dateExample">2078.11.20</string>
    <string name="name">Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closeButton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?</string>
    <string name="logInHere">Login Here</string>
    <string name="no_user">Do not have Account?</string>
    <string name="registered_emailId">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="signUpHere">Creating Account</string>
    <string name="logOut">Log Out</string>
    <string name="sn">S.N</string>
    <string name="weight">Weight</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="creator">Prabesh</string>
    <string name="by">By</string>
    <string name="equal">=</string>
    <string name="kg">Kg</string>
    <string name="rsKg">Rs./Kg</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="textView">TextView</string>
    <string name="added">Added </string>
    <string name="modified">Last Modified </string>
    <string name="type">Type</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

</resources>